# python_celery

./: README.md  celerybeat-schedule.db  main.py  pyproject.toml
app/: tasks.py  worker.py
app/schemas/: task.py
