[tool.poetry]
name = "python-celery"
version = "0.1.0"
description = ""
authors = ["Jeter Chen <dali1756@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
celery = "^5.5.1"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
